manifests/kaniko.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: kaniko
spec:
  containers:
    - image: gcr.io/kaniko-project/executor:latest
      args:
      - --dockerfile=/mnt/Dockerfile
      - --context= /mnt
      - --destination=a2ito/ubuntu-ssh1
      name: kaniko
      volumeMounts:
        - name: mount-volume
          mountPath: /mnt
        - name: kaniko-secret
          mountPath: /root
  restartPolicy: Never
  volumes:
    - name: mount-volume
      hostPath:
        path: /root/kaniko
      volumes:
    - name: kaniko-secret
      secret:
        secretName: regcred
        items:
          - key: .dockerconfigjson
            path: .docker/config.json
