manifests/demo-sticky-session-1-destinationrule.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: sticky-svc
spec:
  host: sticky-svc.default.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      consistentHash:
        useSourceIp: true
        #httpHeaderName: x-user
