manifests/ingress-brigade-api.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-brigade-api
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: brigade.k3s
    http:
      paths: 
      - path: /
        backend:
          serviceName: brigade-brigade-api
          servicePort: 7745
