manifests/istio-zipkin.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: zipkin-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 15032
      name: http-tracing
      protocol: HTTP
    hosts:
    - "zipkin.istio.k3s.local"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: zipkin-vs
  namespace: istio-system
spec:
  hosts:
  - "zipkin.istio.k3s.local"
  gateways:
  - zipkin-gateway
  http:
  - match:
    - port: 15032
    route:
    - destination:
        host: zipkin
        port:
          number: 9411
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: zipkin
  namespace: istio-system
spec:
  host: zipkin
  trafficPolicy:
    tls:
      mode: DISABLE
