manifests/reviews-all-versions.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: reviews
spec:
  hosts:
    - reviews
  http:
  - route:
    - destination:
        host: reviews
        subset: v1
    - destination:
        host: reviews
        subset: v2
    - destination:
        host: reviews
        subset: v3
